tests/rosetta/transpiler/Clojure/cartesian-product-of-two-or-more-lists-3.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/cartesian-product-of-two-or-more-lists-3.clj:24:68).
Unable to resolve symbol: concat_v in this context

Full report at:
/tmp/clojure-8850805645741403886.edn
